--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -74,8 +74,11 @@ html, body {
   // This is the logo at the top of the ToC
   .logo {
     display: block;
-    max-width: 100%;
-    margin-bottom: $logo-margin;
+    width: 50px;
+    margin: 30px auto;
+    background: white;
+    padding: 0.25rem;
+    border-radius: 0.5rem;
   }
 
   &>.search {
